kubernetes/apps/observability/grafana-host/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-host
spec:
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: grafana-host
subsets:
  - addresses:
      - ip: 192.168.2.200
    ports:
      - port: 3000
