kubernetes/apps/observability/grafana-host/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-host
spec:
  hostnames:
    - grafana-host.ringbell.cc
  parentRefs:
    - name: internal
      namespace: networking
  rules:
    - backendRefs:
        - name: grafana-host
          port: 3000
